--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,14 +1,23 @@
-<footer class="footer mt-auto pb-2  ">
-   <div class="container ">
-      <h4>تبرع &copy; 2019</h4>
-      <p>للتواصل بين المرضى و المتبرعين بالدم عبر
-         <span style="font-size: 1.4em; color: darkred;">
-            SMS
-            <!--  <i class="fas fa-sms fa-flip-horizontal"></i> -->
-         </span>
-      </p>
+<!-- <section class="footer">
+   <div class="container footer-container">
+
+      <span>منصة تواصل بين المرضى و المتبرعين بالدم عبر </span>
+      <span style="font-size: 1.4em; color: #fff;"> SMS </span>
+
+   </div>
+</section> -->
+<!-- Footer -->
+
+<footer class="white-section" id="footer">
+   <div class="container-fluid">
+      <i class="social-icon fab fa-facebook-f"></i>
+      <i class="social-icon fab fa-twitter"></i>
+      <i class="social-icon fab fa-instagram"></i>
+      <i class="social-icon fas fa-envelope"></i>
+      <p>© Copyright 2018 TinDog</p>
    </div>
 </footer>
+<%- include("captchajs") -%>
 </div>
 </body>
 
