--- a/views/partials/wilaya.ejs
+++ b/views/partials/wilaya.ejs
@@ -1,7 +1,7 @@
-<div class=" label ">في اي ولاية تقيم حاليا</div>
-<span style="position: relative; ">
-
-   <select dir="rtl" name="wilaya" class="mdb-select  md-form colorful-select dropdown-primary " style="border:none;">
+<!--  <div class=" label ">ولاية الاقامة حاليا</div> -->
+<div class="select">
+   <span class="fas fa-map-marker   select-icon"></span>
+   <select dir="rtl" name="wilaya" class="mdb-select  md-form colorful-select dropdown-primary ">
       <option value="01">01-ولاية أدرار</option>
       <option value="02">02-ولاية الشلف</option>
       <option value="03">03-ولاية الأغواط</option>
@@ -50,5 +50,5 @@
       <option value="46">46-ولاية عين تموشنت</option>
       <option value="47">47-ولاية غرداية</option>
       <option value="48">48-ولاية غليزان</option>
-   </select><span class="fas fa-map-marker   selectspan"></span>
-</span>
+   </select>
+</div>
