--- a/views/addrequest.ejs
+++ b/views/addrequest.ejs
@@ -1,29 +1,29 @@
 <%- include('partials/header'); -%>
-<main role="main">
-   <div class="main-header">
-      <h5> اضافة طلب تبرع </h5>
-      <h3> <%=_tel%> </h3>
+<section class="main">
+   <div class="container main-container">
+      <div class="main-title ">
+         <h5> اضافة طلب تبرع </h5>
+         <h3> <%=_tel%> </h3>
+      </div>
+      <form action="/addrequest" method="POST" class="form-sign">
+
+         <!--  <div class=" label">سلامتك, كيف تصف حالتك؟</div> -->
+         <div class="select">
+            <span class="fas fa-heartbeat   select-icon"></span>
+            <select dir="rtl" name="PatientState" class="mdb-select  md-form colorful-select dropdown-primary ">
+               <option value="S" autofocus>مستقرة</option>
+               <option value="D">حرجة</option>
+            </select>
+         </div>
+
+         <%- include("partials/wilaya") -%>
+         <span>
+            <span class="fas fa-map-marker-alt input-icon"></span>
+            <input type="text" id="adress" class="form-control " placeholder="حدد مكان تواجدك: المشفى,..." required autocomplete="off" onfocus="this.value=''" maxlength="30">
+         </span>
+         <%- include("partials/captcha") -%>
+         <button class="btn btn-danger btn-block" type="submit">اضف الطلب</button>
+      </form>
    </div>
-
-   <form class="form-sign  ">
-
-      <div class=" label ">سلامتك, كيف تصف حالتك؟</div>
-      <span style="position: relative; ">
-         <select dir="rtl" name="PatientState" class="mdb-select  md-form colorful-select dropdown-primary " style="border:none;">
-            <option value="S" autofocus>مستقرة</option>
-            <option value="D">حرجة</option>
-         </select>
-         <span class="fas fa-heartbeat   selectspan"></span>
-      </span>
-      <%- include("partials/wilaya") -%>
-
-      <span style="position: relative; ">
-         <span class="fas fa-map-marker-alt   errspan"></span>
-         <input type="tel" id="adress" class="form-control " placeholder="حدد مكان تواجدك: المشفى,..." required autocomplete="off" onfocus="this.value=''" maxlength="40">
-      </span>
-      <%- include("partials/captcha") -%>
-      <button class="btn btn-md btn-default btn-block" type="submit">اضف الطلب</button>
-   </form>
-</main>
-<%- include("partials/captchajs") -%>
-<%- include('partials/footer') -%>
+</section>
+<%- include("partials/footer") -%>
