--- a/views/contactus.ejs
+++ b/views/contactus.ejs
@@ -1,18 +1,18 @@
 <%-include("partials/header")-%>
-<main role="main">
-   <div class="main-header">
-      <h3> يسرنا تواصلك معنا</h3>
-   </div>
-   <form class="form-sign  ">
+<section class="main">
+   <div class="container main-container">
+      <div class="main-title">
+         <h3> يسرنا تواصلك معنا</h3>
+      </div>
+      <form class="form-sign  ">
 
-      <span style="position: relative; ">
-         <span class="fas fa-user  errspan"></span>
+         <span class="fas fa-user  input-icon"></span>
          <input type="tel" id="nom" class="form-control " placeholder="الاسم" required autocomplete="off" autofocus onfocus="this.value=''">
-      </span>
-      <textarea class="form-control mt-3 " id="exampleFormControlTextarea1" rows="3"></textarea>
-      <%- include("partials/captcha") -%>
-      <button class="btn btn-md btn-default btn-block" type="submit">ارسل</button>
-   </form>
-</main>
-<%- include("partials/captchajs") -%>
-<%-include("partials/footer")-%>
+
+         <textarea class="form-control  " id="exampleFormControlTextarea1" rows="8"></textarea>
+         <%- include("partials/captcha") -%>
+         <button class="btn btn-danger btn-block" type="submit">ارسل</button>
+      </form>
+   </div>
+</section>
+<%- include("partials/footer") -%>
