--- a/views/donorstate.ejs
+++ b/views/donorstate.ejs
@@ -1,24 +1,25 @@
 <%-include("partials/header")-%>
-<main role="main">
-   <div class="main-header">
-      <h5>معلومات المتبرع </h5>
-      <h3><%=_tel%></h3>
-   </div>
-   <form class="form-sign">
-
-      <div class="">
-         <h5> هل انت مستعد حاليا للتبرع </H5>
-         <label class="switch">
-            <input type="checkbox" name="donorStat" checked>
-            <span class="slider round"></span>
-         </label>
+<section class="main">
+   <div class="container main-container">
+      <div class="main-title">
+         <h5>معلومات المتبرع </h5>
+         <h3><%=_tel%></h3>
       </div>
+      <form class="form-sign">
 
-      <%- include("partials/wilaya") -%>
-      <%- include("partials/captcha") -%>
-      <button class="btn btn-md btn-default btn-block" type="submit">تعديل</button>
+         <h5> هل انت مستعد حاليا للتبرع </H5>
+         <div class="select"> <span class="fas fa-heartbeat  select-icon2"></span>
+            <select dir="rtl" style=" position: relative;" name="donorState" class="mdb-select  md-form colorful-select dropdown-primary ">
+               <option value="S" autofocus>نعم </option>
+               <option value="D">لا</option>
+            </select>
+         </div>
 
-   </form>
-</main>
-<%- include("partials/captchajs") -%>
-<%-include("partials/footer")-%>
+         <%- include("partials/wilaya") -%>
+         <%- include("partials/captcha") -%>
+         <button class="btn btn-danger btn-block" type="submit">تعديل</button>
+
+      </form>
+   </div>
+</section>
+<%- include("partials/footer") -%>
