--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -12,35 +12,40 @@
    <!-- Bootstrap core CSS -->
    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
    <link href="https://fonts.googleapis.com/css?family=Cairo:400,900&amp;subset=arabic" rel="stylesheet">
-   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.0/css/all.css" integrity="sha384-Mmxa0mLqhmOeaE8vgOSbKacftZcsNYDjQzuCOm6D02luYSzBG8vpaOykv9lFQ51Y" crossorigin="anonymous">
-   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-
+   <link href="css/all.css" rel="stylesheet">
+   <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.0/css/all.css" integrity="sha384-Mmxa0mLqhmOeaE8vgOSbKacftZcsNYDjQzuCOm6D02luYSzBG8vpaOykv9lFQ51Y" crossorigin="anonymous">
+ -->
    <!-- Custom styles for this template -->
    <link href="css/main.css" rel="stylesheet">
-   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.inputmask/3.1.62/jquery.inputmask.bundle.js"></script>
+   <!-- Custom scripts for this template -->
+   <script type='text/javascript' src='http://code.jquery.com/jquery-1.11.0.js'></script>
+   <script type='text/javascript' src="https://rawgit.com/RobinHerbots/jquery.inputmask/3.x/dist/jquery.inputmask.bundle.js"></script>
    <script type="text/javascript" src="js/main.js"></script>
 
 </head>
 
-<body class="text-center">
-   <div class="cover-container d-flex w-100 h-100 p-3 mb-0 mx-auto flex-column">
-      <header>
-         <div>
-            <nav class="nav nav-masthead justify-content-center">
-               <% if ( _connected===true ){ console.log("user connected"); %>
-               <% if ( _userType==="donor" ){ console.log("donor"); %>
-               <a class="nav-link" href="/donorstate">الرئسية</a>
-               <% } else {  console.log("patient");  %>
-               <a class="nav-link" href="/addrequest">الرئسية</a>
-               <% } %>
-               <a class="nav-link" href="/userprofile">تحديث المعلومات </a>
-               <% } else {  console.log("user not connected"); %>
-               <a class="nav-link" href="/"> الدخول</a>
-               <a class="nav-link" href="/signin">تسجيل</a>
-               <a class="nav-link" href="/getcode">استرجاع الكود</a>
-               <% } %>
-               <a class="nav-link" href="/contactus">اتصل بنا</a>
-            </nav>
-         </div>
-      </header>
+<body>
+   <section class="header">
+      <div class="container header-container">
+
+         <nav class="nav">
+            <a class="navbar-brand  " href="/" style="padding-left:15px;">
+               <strong>تبرع</strong>
+            </a>
+            <% if ( _connected===true ){ console.log("user connected"); %>
+            <% if ( _userType==="donor" ){ console.log("donor"); %>
+            <a class="nav-link" href="/donorstate">الرئسية</a>
+            <% } else {  console.log("patient");  %>
+            <a class="nav-link" href="/addrequest">الرئسية</a>
+            <% } %>
+            <a class="nav-link" href="/userprofile">تحديث المعلومات </a>
+            <% } else {  console.log("user not connected"); %>
+            <a class="nav-link" href="/"> الدخول</a>
+            <a class="nav-link" href="/signin">تسجيل</a>
+            <a class="nav-link" href="/getcode">استرجاع الكود</a>
+            <% } %>
+            <a class="nav-link" href="/contactus">اتصل بنا</a>
+         </nav>
+
+      </div>
+   </section>
