--- a/views/politics.ejs
+++ b/views/politics.ejs
@@ -1,15 +1,16 @@
 <%-include("partials/header")-%>
-<main role="main">
-   <div class="main-header ">
-      <h1>منصة تبرع</h1>
-      <h3> صِلَة المرضى بالمتبرعين بالدم</h3>
+<section class="main">
+   <div class="container main-container">
+      <div class="main-title ">
+         <h1>منصة تبرع</h1>
+         <h3> صِلَة المرضى بالمتبرعين بالدم</h3>
+      </div>
+      <form class="form-sign  ">
+         <h5 class="form-title "> سياسة الموقع </h5>
+         <input type="tel" id="tel" lang="en" dir="ltr" class="form-control " placeholder="رقم الهاتف" required autocomplete="off" autofocus onfocus="this.value=''">
+         <%- include("partials/captcha") -%>
+         <button class="btn btn-danger btn-block" type="submit">سجل</button>
+      </form>
    </div>
-   <form class="form-sign  ">
-      <h5 class="form-title "> سياسة الموقع </h5>
-      <input type="tel" id="tel" lang="en" dir="ltr" class="form-control " placeholder="رقم الهاتف" required autocomplete="off" autofocus onfocus="this.value=''">
-      <%- include("partials/captcha") -%>
-      <button class="btn btn-md btn-default btn-block" type="submit">سجل</button>
-   </form>
-</main>
-<%- include("partials/captchajs") -%>
-<%-include("partials/footer")-%>
+</section>
+<%- include("partials/footer") -%>
