--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -1,19 +1,19 @@
 <%-include("partials/header")-%>
-<main role="main">
-   <div class="main-header">
-      <h1>منصة تبرع</h1>
-      <h4> صِلَة المرضى بالمتبرعين بالدم</h4>
-   </div>
-   <form action="/signin" method="POST" class="form-sign  ">
-      <h5 class="form-title "> إنشاء حساب جديد</h5>
-      <span style="position: relative; ">
-         <span class="fas fa-mobile-alt  fa-fw errspan"></span>
-         <input type="text" id="tel" main="tel" lang="en" dir="ltr" class="form-control " placeholder="رقم الهاتف" required autocomplete="off" autofocus onfocus="this.value=''">
-      </span>
-      <%- include("partials/captcha") -%>
-      <button class="btn btn-md btn-default btn-block" type="submit">سجل</button>
+<section class="main">
+   <div class="container main-container">
+      <div class="main-title">
+         <h1>منصة تبرع</h1>
+         <h4> إنشاء حساب جديد</h4>
+      </div>
+      <form action="/signin" method="POST" class="form-sign  ">
 
-   </form>
-</main>
-<%- include("partials/captchajs") -%>
-<%-include("partials/footer")-%>
+         <span class="fas fa-mobile-alt  fa-fw input-icon"></span>
+         <input type="text" id="tel" main="tel" lang="en" dir="ltr" class="form-control " placeholder="رقم الهاتف" required autocomplete="off" autofocus onfocus="this.value=''">
+
+         <%- include("partials/captcha") -%>
+         <button class="btn btn-danger btn-block" type="submit">سجل</button>
+
+      </form>
+   </div>
+</section>
+<%- include("partials/footer") -%>
