--- a/views/userprofile.ejs
+++ b/views/userprofile.ejs
@@ -1,49 +1,48 @@
 <%-include("partials/header")-%>
-<main role="main">
-   <div class="main-header ">
-      <h5> معلومات المستخدم </h5>
-      <h3> <%=_tel%> </h3>
-   </div>
-   <form action="/userprofile" method="POST" class="form-sign ">
+<section class="main">
+   <div class="container main-container">
+      <div class="main-title ">
+         <h5> معلومات المستخدم </h5>
+         <h3> <%=_tel%> </h3>
+      </div>
+      <form action="/userprofile" method="POST" class="form-sign">
 
-      <div class="  label">اسجل كــ</div>
+         <div class="  label">اسجل كــ</div>
+         <div class="select"> <span class="fas fa-user   select-icon"></span>
+            <select dir="rtl" name="userType" class="mdb-select  md-form colorful-select dropdown-primary">
+               <option value="D" autofocus>متبرع</option>
+               <option value="P">مريض</option>
+            </select>
+         </div>
 
-      <span style="position: relative; ">
-         <select dir="rtl" name="userType" class="mdb-select  md-form colorful-select dropdown-primary" style="border:none;">
-            <option value="D" autofocus>متبرع</option>
-            <option value="P">مريض</option>
-         </select>
-         <span class="fas fa-user   selectspan"></span>
-      </span>
+         <!--Blue select-->
+         <div class="label">زمرة الدم</div>
+         <div class="select">
+            <span class="fas fa-fire   select-icon"></span>
+            <select dir="rtl" name="bloodType" class="mdb-select  md-form colorful-select dropdown-primary ">
+               <option value="A">A+</option>
+               <option value="A-">A-</option>
+               <option value="B+">B+</option>
+               <option value="B-">B-</option>
+               <option value="AB+">AB+</option>
+               <option value="AB-">AB-</option>
+               <option value="O+">O+</option>
+               <option value="O-">O-</option>
+            </select>
+         </div>
+         </span>
 
-      <!--Blue select-->
-      <div class="  label">زمرة الدم</div>
-      <span style="position: relative; ">
-         <select dir="rtl" name="bloodType" class="mdb-select  md-form colorful-select dropdown-primary " style="border:none;">
-            <option value="A">A+</option>
-            <option value="A-">A-</option>
-            <option value="B+">B+</option>
-            <option value="B-">B-</option>
-            <option value="AB+">AB+</option>
-            <option value="AB-">AB-</option>
-            <option value="O+">O+</option>
-            <option value="O-">O-</option>
-         </select>
-         <span class="fas fa-fire   selectspan"></span>
-      </span>
+         <!--/Blue select-->
 
-      <!--/Blue select-->
-
-      <%- include("partials/wilaya") -%>
-      <!--       
+         <%- include("partials/wilaya") -%>
+         <!--       
       userType : D
       bloodType: A
       wilaya   : 01 
       -->
-      <button class="btn btn-md btn-default btn-block" type="submit">تعديل</button>
+         <button class="btn btn-danger btn-block" type="submit">تعديل</button>
 
-   </form>
-</main>
-
-<%-include("partials/captchajs")-%>
-<%-include("partials/footer")-%>
+      </form>
+   </div>
+</section>
+<%- include("partials/footer") -%>
